2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-08-16  Andras Varga

        * tkutil.cc: worked around compilation error in WinSCard.h when 
        compiling with MSVC .NET

2004-08-14  Andras Varga

        * tkapp.cc: new omnetpp.ini entry: [Tkenv]/bitmap-path=. Value should
        be quoted; directories should be separated by ";". The contents of the
        OMNETPP_BITMAP_PATH environment var (or if that's not set, the 
        compilation-time bitmap path) gets concatenated to this one.
        Beware: if you don't quote the value, only the first dir will be
        used and the rest ignored, because ";" denotes comments omnetpp.ini!

2004-08-12  Andras Varga

        * modinsp2.tcl: "t=" tag: center text by default

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-17  Andras Varga

        * tkapp.cc: enable output (set disable_tracing=false) before calling
        finish()

2004-07-06  Andras Varga

        * tkapp.cc: fixed Speedometer usage

2004-06-21   Andras Varga

        * visitor.cc/h: converted pattern matching to use new cPatternMatcher.

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

FIXME make inspectors more consistent:
  ObjectInspector's "info" page should appear also in ContainerInspector (and maybe other inspectors as well)
  ObjectInspector (and all inspectors) should allow name change
  info() and detailedInfo() should appear in all inspectors somewhere
  cWatchInspector: if cPolymorphic is watched, display its info() and detailedInfo()
  cWatchInspector probably not needed (cObjectInspector will do)
FIXME cGate inspectors have now two "up" buttons!!!
TBD there should be a limit on the number of inspector windows open, to prevent
accidentally opening thousand windows with objects of identical names