@@ -1,3 +1,8 @@
+2004-09-26  Andras Varga
+
+        * modinsp2.tcl: graphical module windows: adjust window size to fit 
+        size of graphics
+
 2004-09-24  ------ omnetpp-3.0a7 released ------
 
 2004-09-08  Andras Varga
